[package]
name = "environment-logger"
version = "0.1.0"
edition = "2018"
authors = ["Jon Lamb"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-abort = "0.3"
heapless = "0.7"
embedded-graphics = "0.7"
ssd1306 = "0.7"
display-interface = "0.4"
bme680 = "0.6"
embedded-sdmmc = "0.3"
ds323x = "0.4"

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f411"]

[profile.release]
codegen-units = 1
debug = true
lto = true
