[package]
name = "environment-logger"
version = "0.1.0"
edition = "2018"
authors = ["Jon Lamb"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
panic-abort = "0.3"
heapless = "0.7"
log = "0.4"
embedded-time = "0.12"
embedded-graphics = "0.7"
profont = "0.5"
ssd1306 = "0.7"
display-interface = "0.4"
bme680 = "0.6"
embedded-sdmmc = "0.3"
ds323x = "0.4"

[dependencies.chrono]
version = "0.4"
default-features = false

[dependencies.stm32f4xx-hal]
# Using master branch to get 0.10 features
#version = "0.9"
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
ref = "9bbdac81025292de2a1ba02ca3e60cbedcb70c8c"
features = ["rt", "stm32f411"]

[dependencies.err-derive]
version = "0.3"
default-features = false
features = []

[profile.release]
codegen-units = 1
debug = true
lto = true
